src/status/snapshots/tvision__status__status_line__tests__snapshot_drag_highlight_held_item.snap
---
source: src/status/status_line.rs
expression: "render(&mut line, 40, 1)"
---
size: 40x1
cursor: hidden
text:
| F1 Help  Alt-X Exit                    |
attr:
|abbaaaaaacdddddccccccaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(4) bg=BIOS(7)
  c fg=BIOS(0) bg=BIOS(2)
  d fg=BIOS(4) bg=BIOS(2)
