src/status/snapshots/tvision__status__status_line__tests__snapshot_narrow_drops_overflowing_item.snap
---
source: src/status/status_line.rs
expression: "render(&mut line, 8, 1)"
---
size: 8x1
cursor: hidden
text:
| F1 Help|
attr:
|abbaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(4) bg=BIOS(7)
