src/status/snapshots/tvision__status__status_line__tests__snapshot_textless_item_draws_nothing.snap
---
source: src/status/status_line.rs
expression: "render(&mut line, 40, 1)"
---
size: 40x1
cursor: hidden
text:
| Visible                                |
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
