src/status/snapshots/tvision__status__status_line__tests__snapshot_with_hint_tail.snap
---
source: src/status/status_line.rs
expression: "render(&mut line, 40, 1)"
---
size: 40x1
cursor: hidden
text:
| F1 Help │ Press F1 for help            |
attr:
|abbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(170,0,0) bg=RGB(170,170,170)
